--- a/directnet/src/enc-cyfer/Makefile.in
+++ b/directnet/src/enc-cyfer/Makefile.in
@@ -206,7 +206,7 @@ AM_CFLAGS = @ENC_CFLAGS@ -I.. -Lcyfer/lib -Icyfer/include -Lgmp -Igmp
 AM_LDFLAGS = @ENC_LDFLAGS@ -Lcyfer/lib -Lgmp
 noinst_LIBRARIES = libenc.a
 libenc_a_SOURCES = cyfer.c
-libenc_a_DEPENDENCIES = gmp cyfer
+libenc_a_DEPENDENCIES = gmpdir cyferdir
 all: all-am
 
 .SUFFIXES:
@@ -457,7 +457,7 @@ uninstall-am: uninstall-info-am
 gmp:
 	cd gmp ; $(MAKE) all
 
-cyfer: gmp
+cyferdir: gmpdir
 	cd cyfer ; $(MAKE) all
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
