--- a/directnet/src/enc-fake/Makefile.in
+++ b/directnet/src/enc-fake/Makefile.in
@@ -41,8 +41,8 @@ host_triplet = @host@
 subdir = src/enc-fake
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/macros/curses.m4 \
-	$(top_srcdir)/macros/fltk.m4 $(top_srcdir)/macros/pthread.m4 \
+am__aclocal_m4_deps = $(top_srcdir)/macros/fltk.m4 \
+	$(top_srcdir)/macros/pthread.m4 \
 	$(top_srcdir)/macros/readline.m4 $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
@@ -85,8 +85,6 @@ CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
-CURSES_INCLUDEDIR = @CURSES_INCLUDEDIR@
-CURSES_LIBS = @CURSES_LIBS@
 CXX = @CXX@
 CXXCPP = @CXXCPP@
 CXXDEPMODE = @CXXDEPMODE@
@@ -144,8 +142,6 @@ PTHREAD_CC = @PTHREAD_CC@
 PTHREAD_CFLAGS = @PTHREAD_CFLAGS@
 PTHREAD_LIBS = @PTHREAD_LIBS@
 RANLIB = @RANLIB@
-READLINE_INCLUDES = @READLINE_INCLUDES@
-READLINE_LIBS = @READLINE_LIBS@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
