Some other build system fixes.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@268 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/Makefile.in
+++ b/Makefile.in
@@ -161,6 +161,7 @@ SHELL = @SHELL@
 STRIP = @STRIP@
 UI_CFLAGS = @UI_CFLAGS@
 UI_CPPFLAGS = @UI_CPPFLAGS@
+UI_CXX = @UI_CXX@
 UI_CXXFLAGS = @UI_CXXFLAGS@
 UI_CXX_FALSE = @UI_CXX_FALSE@
 UI_CXX_TRUE = @UI_CXX_TRUE@
