--- a/src/enc-cyfer/Makefile.am
+++ b/src/enc-cyfer/Makefile.am
@@ -6,3 +6,13 @@ AM_LDFLAGS=@ENC_LDFLAGS@ -Lcyfer/lib -Lgmp
 noinst_LIBRARIES=libenc.a
 libenc_a_SOURCES=cyfer.c
 
+install:
+	$(MAKE) install-recursive SUBDIRS=""
+
+install-exec:
+	$(MAKE) install-exec-recursive SUBDIRS=""
+
+install-data:
+	$(MAKE) install-data-recursive SUBDIRS=""
+
+
