Some other build system fixes.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk@268 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/directnet/src/enc-cyfer/Makefile.am
+++ b/directnet/src/enc-cyfer/Makefile.am
@@ -6,3 +6,13 @@ AM_LDFLAGS=@ENC_LDFLAGS@ -Lcyfer/lib -Lgmp
 noinst_LIBRARIES=libenc.a
 libenc_a_SOURCES=cyfer.c
 
+install:
+	$(MAKE) install-recursive SUBDIRS=""
+
+install-exec:
+	$(MAKE) install-exec-recursive SUBDIRS=""
+
+install-data:
+	$(MAKE) install-data-recursive SUBDIRS=""
+
+
