--- a/directnet/Makefile.in
+++ b/directnet/Makefile.in
@@ -161,6 +161,7 @@ SHELL = @SHELL@
 STRIP = @STRIP@
 UI_CFLAGS = @UI_CFLAGS@
 UI_CPPFLAGS = @UI_CPPFLAGS@
+UI_CXX = @UI_CXX@
 UI_CXXFLAGS = @UI_CXXFLAGS@
 UI_CXX_FALSE = @UI_CXX_FALSE@
 UI_CXX_TRUE = @UI_CXX_TRUE@
