--- a/directnet/configure.ac
+++ b/directnet/configure.ac
@@ -182,6 +182,7 @@ AC_SUBST(UI_CXXFLAGS)
 AC_SUBST(UI_LIBS)
 AC_SUBST(UI_LDFLAGS)
 AC_SUBST(UI_DIR)
+AC_SUBST(UI_CXX)
 AM_CONDITIONAL(UI_CXX, test "x$UI_CXX" = "xtrue")
 
 
