--- a/directnet/src/enc-cyfer/Makefile.in
+++ b/directnet/src/enc-cyfer/Makefile.in
@@ -154,6 +154,7 @@ SHELL = @SHELL@
 STRIP = @STRIP@
 UI_CFLAGS = @UI_CFLAGS@
 UI_CPPFLAGS = @UI_CPPFLAGS@
+UI_CXX = @UI_CXX@
 UI_CXXFLAGS = @UI_CXXFLAGS@
 UI_CXX_FALSE = @UI_CXX_FALSE@
 UI_CXX_TRUE = @UI_CXX_TRUE@
@@ -457,9 +458,6 @@ check: check-recursive
 all-am: Makefile $(LIBRARIES)
 installdirs: installdirs-recursive
 installdirs-am:
-install: install-recursive
-install-exec: install-exec-recursive
-install-data: install-data-recursive
 uninstall: uninstall-recursive
 
 install-am: all-am
@@ -548,6 +546,15 @@ uninstall-info: uninstall-info-recursive
 	mostlyclean-libtool mostlyclean-recursive pdf pdf-am ps ps-am \
 	tags tags-recursive uninstall uninstall-am uninstall-info-am
 
+
+install:
+	$(MAKE) install-recursive SUBDIRS=""
+
+install-exec:
+	$(MAKE) install-exec-recursive SUBDIRS=""
+
+install-data:
+	$(MAKE) install-data-recursive SUBDIRS=""
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
