--- a/directnet/Makefile.am
+++ b/directnet/Makefile.am
@@ -1,8 +1,8 @@
 SUBDIRS=src
 
-EXTRA_DIST=acsite.m4 \
-directnet.desktop
-
 appsdir=$(datadir)/applications
 apps_DATA=directnet.desktop
+
+docsdir=$(datadir)/doc/directnet
+docs_DATA=AUTHORS ChangeLog COPYING PROTOCOL README
 
