--- a/directnet/Makefile.in
+++ b/directnet/Makefile.in
@@ -68,9 +68,10 @@ am__vpath_adj = case $$p in \
     *) f=$$p;; \
   esac;
 am__strip_dir = `echo $$p | sed -e 's|^.*/||'`;
-am__installdirs = "$(DESTDIR)$(appsdir)"
+am__installdirs = "$(DESTDIR)$(appsdir)" "$(DESTDIR)$(docsdir)"
 appsDATA_INSTALL = $(INSTALL_DATA)
-DATA = $(apps_DATA)
+docsDATA_INSTALL = $(INSTALL_DATA)
+DATA = $(apps_DATA) $(docs_DATA)
 ETAGS = etags
 CTAGS = ctags
 DIST_SUBDIRS = $(SUBDIRS)
@@ -214,11 +215,10 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 SUBDIRS = src
-EXTRA_DIST = acsite.m4 \
-directnet.desktop
-
 appsdir = $(datadir)/applications
 apps_DATA = directnet.desktop
+docsdir = $(datadir)/doc/directnet
+docs_DATA = AUTHORS ChangeLog COPYING PROTOCOL README
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
@@ -299,6 +299,23 @@ uninstall-appsDATA:
 	  f=$(am__strip_dir) \
 	  echo " rm -f '$(DESTDIR)$(appsdir)/$$f'"; \
 	  rm -f "$(DESTDIR)$(appsdir)/$$f"; \
+	done
+install-docsDATA: $(docs_DATA)
+	@$(NORMAL_INSTALL)
+	test -z "$(docsdir)" || $(mkdir_p) "$(DESTDIR)$(docsdir)"
+	@list='$(docs_DATA)'; for p in $$list; do \
+	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
+	  f=$(am__strip_dir) \
+	  echo " $(docsDATA_INSTALL) '$$d$$p' '$(DESTDIR)$(docsdir)/$$f'"; \
+	  $(docsDATA_INSTALL) "$$d$$p" "$(DESTDIR)$(docsdir)/$$f"; \
+	done
+
+uninstall-docsDATA:
+	@$(NORMAL_UNINSTALL)
+	@list='$(docs_DATA)'; for p in $$list; do \
+	  f=$(am__strip_dir) \
+	  echo " rm -f '$(DESTDIR)$(docsdir)/$$f'"; \
+	  rm -f "$(DESTDIR)$(docsdir)/$$f"; \
 	done
 
 # This directory's subdirectories are mostly independent; you can cd
@@ -568,7 +585,7 @@ check: check-recursive
 all-am: Makefile $(DATA) config.h
 installdirs: installdirs-recursive
 installdirs-am:
-	for dir in "$(DESTDIR)$(appsdir)"; do \
+	for dir in "$(DESTDIR)$(appsdir)" "$(DESTDIR)$(docsdir)"; do \
 	  test -z "$$dir" || $(mkdir_p) "$$dir"; \
 	done
 install: install-recursive
@@ -615,7 +632,7 @@ info: info-recursive
 
 info-am:
 
-install-data-am: install-appsDATA
+install-data-am: install-appsDATA install-docsDATA
 
 install-exec-am:
 
@@ -643,7 +660,7 @@ ps: ps-recursive
 
 ps-am:
 
-uninstall-am: uninstall-appsDATA uninstall-info-am
+uninstall-am: uninstall-appsDATA uninstall-docsDATA uninstall-info-am
 
 uninstall-info: uninstall-info-recursive
 
@@ -655,13 +672,14 @@ uninstall-info: uninstall-info-recursive
 	distclean-recursive distclean-tags distcleancheck distdir \
 	distuninstallcheck dvi dvi-am html html-am info info-am \
 	install install-am install-appsDATA install-data \
-	install-data-am install-exec install-exec-am install-info \
-	install-info-am install-man install-strip installcheck \
-	installcheck-am installdirs installdirs-am maintainer-clean \
-	maintainer-clean-generic maintainer-clean-recursive \
-	mostlyclean mostlyclean-generic mostlyclean-libtool \
-	mostlyclean-recursive pdf pdf-am ps ps-am tags tags-recursive \
-	uninstall uninstall-am uninstall-appsDATA uninstall-info-am
+	install-data-am install-docsDATA install-exec install-exec-am \
+	install-info install-info-am install-man install-strip \
+	installcheck installcheck-am installdirs installdirs-am \
+	maintainer-clean maintainer-clean-generic \
+	maintainer-clean-recursive mostlyclean mostlyclean-generic \
+	mostlyclean-libtool mostlyclean-recursive pdf pdf-am ps ps-am \
+	tags tags-recursive uninstall uninstall-am uninstall-appsDATA \
+	uninstall-docsDATA uninstall-info-am
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
