--- a/directnet/src/enc-fake/Makefile.in
+++ b/directnet/src/enc-fake/Makefile.in
@@ -76,6 +76,12 @@ AMDEP_FALSE = @AMDEP_FALSE@
 AMDEP_TRUE = @AMDEP_TRUE@
 AMTAR = @AMTAR@
 AR = @AR@
+AUTH_CFLAGS = @AUTH_CFLAGS@
+AUTH_CPPFLAGS = @AUTH_CPPFLAGS@
+AUTH_CXXFLAGS = @AUTH_CXXFLAGS@
+AUTH_DIR = @AUTH_DIR@
+AUTH_LDFLAGS = @AUTH_LDFLAGS@
+AUTH_LIBS = @AUTH_LIBS@
 AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
