Cool little button in the gaim plugin to send the key.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@283 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/configure.ac
+++ b/configure.ac
@@ -197,7 +197,7 @@ GAIM_PLUGIN=yes
 
 # Check for Gaim
 PKG_CHECK_MODULES(GAIM,
-[gaim >= 1.2.0 gaim < 2.0.0],
+[gaim >= 1.2.0 gaim < 2.0.0 gtk+-2.0],
 [
         AC_DEFINE(HAVE_GAIM, 1, [Define if gaim-devel is available.])
 ],
