Too many changes to explain.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk@298 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/directnet/src/Makefile.am
+++ b/directnet/src/Makefile.am
@@ -13,6 +13,7 @@ client.c \
 connection.c \
 directnet.c \
 hash.c \
+keepalive.c \
 lock.c \
 server.c \
 whereami.c \
@@ -34,6 +35,7 @@ client.c \
 connection.c \
 directnet.c \
 hash.c \
+keepalive.c \
 lock.c \
 server.c \
 whereami.c
@@ -56,6 +58,7 @@ client.c \
 connection.c \
 directnet.c \
 hash.c \
+keepalive.c \
 lock.c \
 server.c \
 whereami.c
@@ -80,6 +83,7 @@ client.c \
 connection.c \
 directnet.c \
 hash.c \
+keepalive.c \
 lock.c \
 server.c
 
